[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/menu_background.png" type="Texture" id=2]
[ext_resource path="res://scenes/GUI/WheelMaster.gd" type="Script" id=3]
[ext_resource path="res://assets/grab_wheel.png" type="Texture" id=4]
[ext_resource path="res://assets/font/Minimal5x7.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/curve_arrow_flip.png" type="Texture" id=6]
[ext_resource path="res://assets/curve_arrow.png" type="Texture" id=7]
[ext_resource path="res://assets/arrow.png" type="Texture" id=8]
[ext_resource path="res://assets/menu_overground.png" type="Texture" id=9]
[ext_resource path="res://assets/bar_fill.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 5 )

[node name="GUI" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
rect_min_size = Vector2( 1024, 0 )
custom_constants/margin_right = 30
custom_constants/margin_top = 10
custom_constants/margin_left = 30
custom_constants/margin_bottom = 10
script = ExtResource( 1 )

[node name="BoxBackground" type="NinePatchRect" parent="."]
margin_left = 30.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 190.0
rect_min_size = Vector2( 964, 180 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
patch_margin_left = 11
patch_margin_right = 11

[node name="BoxMargins" type="MarginContainer" parent="."]
margin_left = 30.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 190.0
rect_min_size = Vector2( 964, 180 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="BoxDivider" type="HBoxContainer" parent="BoxMargins"]
margin_left = 15.0
margin_top = 15.0
margin_right = 949.0
margin_bottom = 165.0
custom_constants/separation = 50

[node name="WheelMaster" type="Control" parent="BoxMargins/BoxDivider"]
margin_right = 210.0
margin_bottom = 150.0
rect_min_size = Vector2( 210, 150 )
script = ExtResource( 3 )

[node name="TraverseWheel" type="TextureButton" parent="BoxMargins/BoxDivider/WheelMaster"]
editor/display_folded = true
margin_right = 150.0
margin_bottom = 150.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 75, 75 )
action_mode = 0
texture_normal = ExtResource( 4 )

[node name="Label_F" type="Label" parent="BoxMargins/BoxDivider/WheelMaster/TraverseWheel"]
margin_left = 69.6667
margin_top = 64.3333
margin_right = 82.6667
margin_bottom = 86.3333
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "F"
align = 1
valign = 1

[node name="Arrow_CNTR" type="TextureRect" parent="BoxMargins/BoxDivider/WheelMaster"]
margin_left = 90.0
margin_top = -30.0
margin_right = 190.0
margin_bottom = 70.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 6 )

[node name="Arrow_CLCK" type="TextureRect" parent="BoxMargins/BoxDivider/WheelMaster"]
margin_left = 90.0
margin_top = 80.0
margin_right = 190.0
margin_bottom = 180.0
rect_rotation = 180.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 50, 50 )
texture = ExtResource( 7 )

[node name="Label_CNTR" type="Label" parent="BoxMargins/BoxDivider/WheelMaster"]
margin_left = 159.0
margin_top = 13.0
margin_right = 207.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
text = "CNTR"
align = 1
valign = 1

[node name="Label_CLCK" type="Label" parent="BoxMargins/BoxDivider/WheelMaster"]
margin_left = 159.0
margin_top = 123.0
margin_right = 208.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 1 )
text = "CLCK"
align = 1
valign = 1

[node name="Label_TRAVLAY" type="Label" parent="BoxMargins/BoxDivider/WheelMaster"]
margin_left = 115.0
margin_top = 52.0
margin_right = 245.0
margin_bottom = 102.0
rect_min_size = Vector2( 130, 50 )
rect_rotation = 90.0
rect_pivot_offset = Vector2( 65, 25 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "TGLP
ENGAGE"
align = 1
valign = 1

[node name="RangeMaster" type="Control" parent="BoxMargins/BoxDivider"]
editor/display_folded = true
margin_left = 260.0
margin_right = 325.0
margin_bottom = 150.0
rect_min_size = Vector2( 65, 150 )

[node name="Up" type="TextureButton" parent="BoxMargins/BoxDivider/RangeMaster"]
margin_left = -109.0
margin_top = -115.0
margin_right = 141.0
margin_bottom = 135.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 125, 125 )
texture_normal = ExtResource( 8 )

[node name="Down" type="TextureButton" parent="BoxMargins/BoxDivider/RangeMaster"]
margin_left = -109.0
margin_top = 13.0
margin_right = 141.0
margin_bottom = 263.0
rect_rotation = 180.0
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 125, 125 )
texture_normal = ExtResource( 8 )

[node name="Range" type="TextureProgress" parent="BoxMargins/BoxDivider/RangeMaster"]
margin_left = 4.0
margin_top = 25.0
margin_right = 29.0
margin_bottom = 123.0
value = 100.0
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 11
stretch_margin_top = 11
stretch_margin_right = 11
stretch_margin_bottom = 11

[node name="E_Label" type="Label" parent="BoxMargins/BoxDivider/RangeMaster"]
margin_left = 42.0
margin_top = 1.0
margin_right = 55.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "E"
align = 1
valign = 1

[node name="Q_Label" type="Label" parent="BoxMargins/BoxDivider/RangeMaster"]
margin_left = 42.0
margin_top = 132.0
margin_right = 55.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 3 )
text = "Q"
align = 1
valign = 1

[node name="RANGE_Label" type="Label" parent="BoxMargins/BoxDivider/RangeMaster"]
margin_left = 55.0
margin_top = 46.0
margin_right = 116.0
margin_bottom = 68.0
rect_rotation = 90.0
custom_fonts/font = SubResource( 3 )
text = "RANGE"
align = 1
valign = 1

[node name="FireMaster" type="Control" parent="BoxMargins/BoxDivider"]
margin_left = 375.0
margin_right = 375.0
margin_bottom = 150.0

[node name="PayloadMaster" type="Control" parent="BoxMargins/BoxDivider"]
margin_left = 425.0
margin_right = 425.0
margin_bottom = 150.0
[connection signal="button_down" from="BoxMargins/BoxDivider/WheelMaster/TraverseWheel" to="BoxMargins/BoxDivider/WheelMaster" method="_on_TraverseWheel_button_down"]
[connection signal="button_up" from="BoxMargins/BoxDivider/WheelMaster/TraverseWheel" to="BoxMargins/BoxDivider/WheelMaster" method="_on_TraverseWheel_button_up"]
